[package]
name = "smart_exe"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "smart_exe"
path = "src/main.rs"

[dependencies]
serde       = { version = "1",        features = ["derive"] }
serde_json  = "1"
csv         = "1"
log         = "0.4"
env_logger  = "0.10"
clap        = { version = "=4.4.18",  features = ["derive"] }
rand        = "0.8"
bincode     = "1"
ctrlc       = { version = "3",        features = ["termination"] }
